# pkg/server/webserver/consume/consume.go
@@ -9,21 +9,25 @@ import (
 )
 
 type AddConsumeRequest struct {
-	Money  float64 `json:"money"`
-	TypeId int64   `json:"type_id"`
+	Money  float64 `json:"money" binding:"required"`
+	TypeId int64   `json:"type_id" binding:"required"`
 	Remark string  `json:"remark"`
 }
 
 type ConsumeListRequest struct {
-	TypeId    int64  `json:"type_id" form:"type_id"`
-	StartTime string `json:"start_time" form:"start_time"`
-	EndTime   string `json:"end_time" form:"end_time"`
+	TypeId    int64  `json:"type_id" form:"type_id"`       // 消费种类id
+	StartTime string `json:"start_time" form:"start_time"` //起始时间
+	EndTime   string `json:"end_time" form:"end_time"`     //截止时间
 	webbase.RequestPage
 }
 
 type UpdateConsumeRequest struct {
-	Id int64 `json:"id"`
+	Id int64 `json:"id" binding:"required"` //id
 	AddConsumeRequest
+}
+
+type ConsumeViewReq struct {
+	YearMon string `json:"year_mon" form:"year_mon" binding:"required"` //年月
 }
 
 // @Title 新增消费记录
@@ -82,7 +86,7 @@ func (w *ConsumeWebServer) ConsumeList(c *gin.Context) {
 		w.Error(c, 5000, "user no permission")
 		return
 	}
-	cList, err := consume.QueryByConsume(req.StartTime, req.EndTime, u.UserId, req.TypeId, req.Limit, req.Offset)
+	cList, err := consume.QueryConsumeList(req.StartTime, req.EndTime, u.UserId, req.TypeId, req.Limit, req.Offset)
 	if err != nil {
 		sdk.Log.Errorf("query consume error:%v", err)
 		w.Error(c, 5000, "query consume error")
@@ -125,4 +129,36 @@ func (w *ConsumeWebServer) UpdateConsume(c *gin.Context) {
 		return
 	}
 	w.Success(c, nil)
+}
+
+
+
+// @Title 月消费视图
+// @Author y18175612315@163.com
+// @Description 月消费视图
+// @Tags 消费管理相关接口
+// @Param Authorization	header	string true "Bearer 31a165baebe6dec616b1f8f3207b4273"
+// @Param year_mon query string true "年月"
+// @Success 200 {object} webbase.Response
+// @Router	/ledger/v1/consume/month_view [get]
+func (w *ConsumeWebServer) ConsumeView(c *gin.Context) {
+	var req ConsumeViewReq
+	if err := c.ShouldBind(&req); err != nil {
+		sdk.Log.Error("invalid request")
+		w.Error(c, webbase.InvalidRequest, "invalid request")
+		return
+	}
+	u := w.GetUser(c)
+	if u == nil {
+		sdk.Log.Error("user no permission")
+		w.Error(c, 5000, "user no permission")
+		return
+	}
+	dayList, err := consume.GetConsumeView(u.UserId, req.YearMon)
+	if err != nil {
+		sdk.Log.Error("get consume view err:", err)
+		w.Error(c, 5000, "get consume view err")
+		return
+	}
+	w.Success(c, dayList)
 }
